--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="container">
             <div class="row v-center">
                 <div class="col-xs-12 col-md-7 header-text">
-                    <h2>The Green City Protocol</h2>
+                    <h2>The Green City Protocol test</h2>
                     <p><strong>We are building a protocol</strong> that will enable cities to create their own Green
                         City
                         initiatives in line with <strong>Sustainable Development Goals</strong> and based on each
